# ChangeLog for dev-db/mongodb
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/mongodb/ChangeLog,v 1.103 2015/01/14 09:26:02 ultrabug Exp $

*mongodb-2.6.7 (14 Jan 2015)

  14 Jan 2015; Ultrabug <ultrabug@gentoo.org> -mongodb-2.4.11.ebuild,
  -mongodb-2.6.4-r1.ebuild, -mongodb-2.6.5-r1.ebuild, +mongodb-2.6.7.ebuild:
  version bump, drop old

*mongodb-2.6.6 (10 Dec 2014)

  10 Dec 2014; Ultrabug <ultrabug@gentoo.org> +mongodb-2.6.6.ebuild:
  version bump

*mongodb-2.6.5-r1 (12 Nov 2014)
*mongodb-2.6.4-r1 (12 Nov 2014)

  12 Nov 2014; Ultrabug <ultrabug@gentoo.org> -mongodb-2.6.4.ebuild,
  +mongodb-2.6.4-r1.ebuild, -mongodb-2.6.5.ebuild, +mongodb-2.6.5-r1.ebuild:
  add PaX marking on 2.6 ebuilds wrt #526114

*mongodb-2.4.12 (17 Oct 2014)

  17 Oct 2014; Ultrabug <ultrabug@gentoo.org> -mongodb-2.4.10-r1.ebuild,
  +mongodb-2.4.12.ebuild:
  version bump, drop old

*mongodb-2.6.5 (13 Oct 2014)

  13 Oct 2014; Ultrabug <ultrabug@gentoo.org> -mongodb-2.6.3.ebuild,
  +mongodb-2.6.5.ebuild:
  version bump fix #525176

*mongodb-2.4.11 (02 Sep 2014)

  02 Sep 2014; Ultrabug <ultrabug@gentoo.org> +mongodb-2.4.11.ebuild,
  +files/mongodb-2.4.11-fix-scons.patch:
  version bump

*mongodb-2.6.4 (12 Aug 2014)

  12 Aug 2014; Ultrabug <ultrabug@gentoo.org> +mongodb-2.6.4.ebuild:
  version bump

  23 Jul 2014; Ultrabug <ultrabug@gentoo.org> -mongodb-2.2.7.ebuild,
  -files/mongodb-2.2-fix-sharedclient.patch,
  -files/mongodb-2.2-fix-x86client.patch,
  -files/mongodb-2.2-r1-fix-scons.patch,
  -files/mongodb-2.2-r2-boost-1.50.patch:
  drop old and vulnerable version wrt #497540

*mongodb-2.6.3 (20 Jun 2014)

  20 Jun 2014; Ultrabug <ultrabug@gentoo.org> -mongodb-2.6.1-r1.ebuild,
  -mongodb-2.6.2.ebuild, +mongodb-2.6.3.ebuild:
  version bump, drop bugged

*mongodb-2.6.2 (17 Jun 2014)

  17 Jun 2014; Ultrabug <ultrabug@gentoo.org> +mongodb-2.6.2.ebuild,
  +files/mongodb-2.6.2-fix-scons.patch:
  version bump
