@@ -1,6 +1,6 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/mongodb/mongodb-2.6.7.ebuild,v 1.1 2015/01/14 09:26:02 ultrabug Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/mongodb/mongodb-2.6.7.ebuild,v 1.2 2015/02/15 12:12:00 pacho Exp $
 
 EAPI=5
 SCONS_MIN_VERSION="1.2.0"
@@ -19,7 +19,7 @@ SRC_URI="http://downloads.mongodb.org/src/${MY_P}.tar.gz
 
 LICENSE="AGPL-3 Apache-2.0"
 SLOT="0"
-KEYWORDS="~amd64 ~x86"
+KEYWORDS="amd64 ~x86"
 IUSE="debug kerberos mms-agent ssl static-libs"
 
 PDEPEND="mms-agent? ( dev-python/pymongo app-arch/unzip )"
