@@ -7,13 +7,13 @@ DIST gst-plugins-bad-1.2.4.tar.xz 3272824 SHA256 984c133ec9d5d705e313d9e2bbd1472
 DIST gst-plugins-bad-1.4.5.tar.xz 3824936 SHA256 152fad7250683d72f9deb36c5685428338365fe4a4c87ffe15e38783b14f983c SHA512 65d6be58957b1329420611b8e6f1eb9869420745d9165047631cdf9e45083605f37dcfaf68a288fe4252f1b3543f7f70ded9c12eab2e0ac4ac9f4c4ce9eaac7a WHIRLPOOL f5ade3f101ca82b52e7145e5ac16f5c1ab5d042415ee7753586dc6ad0942467c4c5b5b4aa6b0bc44e1ebd9c40de1964df265aa41599cb692fd32aab2b6a7acf7
 EBUILD gst-plugins-bad-0.10.23-r2.ebuild 1522 SHA256 57b13e7333e0db2e869da99060df1efa28241589b411793757c321a2e7165218 SHA512 75664bb60d6ffc021f1301e683d569ff66ce686f08b99c24713c6f44fb651c39729fa59a4771633c5733b9ec08d3c2ff7ee9e136f6ff413d7addda1e6c2f68f0 WHIRLPOOL 734ce2b8683168018fd1f5e7c3aa1148a97d9209262942b88da3b997cf8b94fdcc2edd0661e21784aee5964b5ad3ca026682adb55b88b93619d22cc58f8177b6
 EBUILD gst-plugins-bad-1.2.4-r1.ebuild 1684 SHA256 fe383851fa156cbbce7cda6f7db30be9767e6df8a28f0051e2485b00846c12a0 SHA512 f52a5844b13965936a223ff0bf7e9e4659e949211f74387d9079a4ccca85140a8a4daaab9124b43f3ce3a11a2704fc6c54fcccf20b77f83a04e8678b38bc2b9f WHIRLPOOL 91fafd24883187737fb3348fd9cea41966eae7b93b3fb2451c8a9466a716443346ee39c1d69f796b211db9b23470fcb49c5cc774db2e4fd286f48e2a9149b60f
-EBUILD gst-plugins-bad-1.4.5.ebuild 2125 SHA256 15b281fdae47743d259629c8ee647d9358a491f61563c1a7026af3469567ba4c SHA512 b762c1d426efc5fb901e1fccd51dc15e79f1c19a97e782fe8e2064452b9dde0e8aa316b3a6a4f8245ee5c2fdb78cbab20960ef8fa2374bfc8cd728db79d8db47 WHIRLPOOL 2ed06d4d5f7058b78affff72f2722aeb8e153062f948207d6b41ba34735e776433d333dc53b7f07bc4dca4270582aecbd337b6b02613b69096eefa7fc7f73db3
-MISC ChangeLog 25336 SHA256 853ebcaac6e5fbf45a7e76ad599a3254b610458120c9a162ca2d4b173e2d199a SHA512 9a04c4abb0c5b87d1d2ffcf801172bdc2cb26d5c8dafaf944254c1336c428b241cf2dfd120e58e16296310d8ea7c0f218ef63c8b046f7fd2e7098dc7d63eeedb WHIRLPOOL 5f9b972ff38b3950f333c5565bc64a220e1c6ead2fec3fba35af9ad7235969d148ca5a1afc9076900e01d85258506d57bb409493addf557bd35e50e5e990d65f
+EBUILD gst-plugins-bad-1.4.5.ebuild 2133 SHA256 f618e751db948c3c2358b27dc779c406ac7b7c233de815aa4a47ae1ab42f6cd0 SHA512 0e6dd14bad5dc78ce574eb24338cd84479e7afce93c7c97b0568c76d42340ca9e671852ddaa34629bf613adfee5af40437cb9c19c35acfce9e22f15fde493c3e WHIRLPOOL 95f873f8dde6b8d43096c2b224cd3c7568aee4760cbc71d7799dee488d8742b13c3f8d2c60e10dee0af8a6dfd64a541ae72942ee7bbc47764bfac3bc9b58ec6a
+MISC ChangeLog 25457 SHA256 95bff9549ba7f0f09cbbff94a5a035c58c027c66a8cb0c2d38aa3aef86c72637 SHA512 456e8bbc622e03221f14187cf6708261ebaf22916a9ee455c1a506f37f09a15e914b10db54ab5e341bcc5157dc6d462a9d69c632bf8a4f4607fbf17e104e828a WHIRLPOOL 703b7eef3517fd4285b81dce067bb2e62433a1de2971c3d29ad7574850f6d9ce0003864e22fbf8edea468dcbdcc323b25381341a34ece71753d078756d6e03e6
 MISC metadata.xml 272 SHA256 cf37db16e10ad3e618ecc83d1afa9779b4f8566ed0397961b646707eab70447f SHA512 961e43c1a7d75eb5ef9913f92cdcf8ea6d197b8eae71c87d41ca6ccd4e271738d01573524beb3d6430558d30eae822a8c9ccff67907c1fff5a7bf5188439300c WHIRLPOOL be5091a031488c0fcb91449ee84d82ff05476692799a212267a244d75c85385ccdce6871310e2d3b392d4eccb4006f0138356f21e1e3127eea0bec0e9d8a68d4
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlTRERcACgkQCaWpQKGI+9Qg9ACbB16DGeEQn6CAN5IeXbWQvG14
-50cAmwQ4gNMoW9g8AOOxS+pnNoRzg6PP
-=gjtK
+iEUEAREIAAYFAlTgkRwACgkQCaWpQKGI+9ROxgCY53cdkraOMdrsg/ZS47tIdDtx
+QQCcDF/vloN5NDKypZr+g3YnEYj4n/g=
+=XSCe
 -----END PGP SIGNATURE-----
