@@ -4,11 +4,11 @@ DESCRIPTION=A high-performance, open source, schema-free document-oriented datab
 EAPI=5
 HOMEPAGE=http://www.mongodb.org
 IUSE=debug kerberos mms-agent ssl static-libs
-KEYWORDS=~amd64 ~x86
+KEYWORDS=amd64 ~x86
 LICENSE=AGPL-3 Apache-2.0
 PDEPEND=mms-agent? ( dev-python/pymongo app-arch/unzip )
 RDEPEND=app-arch/snappy >=dev-cpp/yaml-cpp-0.5.1 >=dev-libs/boost-1.50[threads(+)] >=dev-libs/libpcre-8.30[cxx] dev-libs/snowball-stemmer dev-util/google-perftools[-minimal] net-libs/libpcap ssl? ( >=dev-libs/openssl-1.0.1g )
 SLOT=0
 SRC_URI=http://downloads.mongodb.org/src/mongodb-src-r2.6.7.tar.gz mms-agent? ( http://dev.gentoo.org/~ultrabug/20140409-mms-monitoring-agent.zip )
 _eclasses_=check-reqs	a7f404bfb16e0a996700c5d3ac4edad3	eutils	998e5931fb95b10a6a11ec796ada2759	flag-o-matic	c263990f1b677b0f0be0a3299f179762	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	pax-utils	dfe060cb70d89757fde5c1ff8405e950	scons-utils	988e24b9e2e4642189b4e97c03e5ae71	systemd	090342761f573a8280dd5aa6b0345f3b	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac	user	f54e098dd38ba1c0847a13e685b87747	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=a3c9b8c3f6f09f4683baeb86828323b9
+_md5_=8e3f784fef3ada55b5638a4d71652460
